--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,66 +5,47 @@
     <title>Home Page</title>
 
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
 </head>
 
 <body>
-<div class="node-info">
-    <div class="row id-row">
-        <div class="row-label">Peer ID:</div>
-        <div class="row-value"><%= peer_id %></div>
-    </div>
-    <div class="row status-row">
-        <div class="row-label">Peer Status:</div>
-        <div class="row-value"></div>
-    </div>
-    <div class="row main-folder-addr">
-        <div class="row-label">Main folder address:</div>
-        <div class="row-value"></div>
-    </div>
-    <div class="row local-addrs-row">
-        <div class="row-label">Swarm Local Address:</div>
-        <div class="row-value"></div>
-    </div>
-    <div class="row peers-row">
-        <div class="row-label">Swarm Connected Peers:</div>
-        <div class="row-value"></div>
+<div class="container-fluid">
+    <div class="node-info main-component">
+        <div class="line id-row">
+            <div class="row-label">Peer ID:</div>
+            <div class="row-value"><%= peer_id %></div>
+        </div>
+            <div class="line folders-line">
+
+            </div>
+        <div class="line local-addrs-row">
+            <div class="row-label">Swarm Local Address:</div>
+            <textarea class="row-value" rows="2"></textarea>
+        </div>
+        <div class="line peers-row">
+            <div class="row-label">Connected Peers:</div>
+            <div class="row-value"></div>
+
+        </div>
 
     </div>
-
+    <div class="version-control component"></div>
+    <div class="messaging component"></div>
 </div>
 </body>
 <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+<script src="/javascripts/home.js"></script>
 
-<script>
-    $(document).ready(function () {
-        $.ajax({
-            url: 'http://localhost:3000/node/info',
-            type: 'POST',
-            dataType: 'json',
-            success(response) {
-                console.log(response);
-                if (response.localAddrs !== undefined) {
-                    $('.local-addrs-row .row-value').text(response.localAddrs);
-                }
-                if (response.swarm_peers !== undefined) {
-                    $('.peers-row .row-value').text(response.swarm_peers.length);
-                }
-                if (response.main_folder !== undefined) {
-                    $('.main-folder-addr .row-value').text(response.main_folder);
-                }
-            },
-            error(jqXHR, status, errorThrown) {
-                console.log(jqXHR);
-
-            }
-        });
-    });
-</script>
 </html>
