added routes to create project and user.

--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -37,7 +37,10 @@
                 <input type="text" class="form-control" placeholder="project_name" aria-label="Project Name"
                        aria-describedby="basic-addon1">
             </div>
-
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="project_path" aria-label="Project Path"
+                       aria-describedby="basic-addon1">
+            </div>
             <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" id="customCheck1" name="git_ext">
                 <label class="custom-control-label" for="customCheck1">Include git extension</label>
