--- a/views/user-auth.ejs
+++ b/views/user-auth.ejs
@@ -21,10 +21,10 @@
         <form id="login_form" method="POST" action="/login">
             <div class="input-group mb-3">
                 <input type="email" class="form-control" placeholder="Email" name="email" aria-label="Email"
-                       aria-describedby="basic-addon1">
+                       aria-describedby="basic-addon1" value="alin@test.com">
             </div>
             <div class="input-group mb-3">
-                <input type="password" class="form-control" placeholder="Password" name="password" aria-label="Password"
+                <input type="password" class="form-control" placeholder="Password" name="password" aria-label="Password" value="parola"
                        aria-describedby="basic-addon1">
             </div>
             <button type="submit" class="btn btn-info login-submit">Log in</button>
@@ -35,20 +35,20 @@
         <form id="register_form" method="POST" action="/register">
 
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Username" aria-label="Username" name="username"
+                <input type="text" class="form-control" placeholder="Username" aria-label="Username" name="username" value="alin"
                        aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-                <input type="email" class="form-control" placeholder="Email" aria-label="Email" name="email"
+                <input type="email" class="form-control" placeholder="Email" aria-label="Email" name="email" value="alin@test.com"
                        aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
-                <input type="password" class="form-control" placeholder="Password" aria-label="Password" name="password"
+                <input type="password" class="form-control" placeholder="Password" aria-label="Password" name="password" value="parola"
                        aria-describedby="basic-addon1">
             </div>
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Desired folder path for the application's config files" aria-label="Folder Path" name="folderpath"
-                       aria-describedby="basic-addon1">
+                       aria-describedby="basic-addon1" value="C:\Users\Alin\distcollab">
             </div>
             <button type="submit" class="btn btn-info register-submit">Register</button>
 
