--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,26 +14,100 @@
 <body>
 <div class="container-fluid">
     <div class="node-info main-component">
-        <div class="line id-row">
-            <div class="row-label">Peer ID:</div>
-            <div class="row-value"><%= peer_id %></div>
+        <input type="hidden" class="project_id" value="<%= projectInfo.id %>">
+        <div class="line project-row">
+            <div class="row-label">Project:</div>
+            <div class="row-value">Loading project...</div>
+            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#peerInfoModal">Show peer info</button>
         </div>
-            <div class="line folders-line">
 
-            </div>
-        <div class="line local-addrs-row">
-            <div class="row-label">Swarm Local Address:</div>
-            <textarea class="row-value" rows="2"></textarea>
-        </div>
         <div class="line peers-row">
             <div class="row-label">Connected Peers:</div>
-            <div class="row-value"></div>
+            <div class="row-value" style="width: 88%;"><span class="peers-count"></span>
+                <div class="node-buttons-area">
+                    <button class="btn btn-info publish-repository">Share Local Folder</button>
+                    <button class="btn btn-info">Update Local Folder</button>
+                    <button class="btn btn-info">Update Local Folder From specific peer</button>
+                </div>
+            </div>
 
         </div>
 
     </div>
-    <div class="version-control component"></div>
-    <div class="messaging component"></div>
+    <div class="version-control component">
+        <div class="line title-row">
+            <div class="">Git - version control</div>
+        </div>
+        <div class="line sync-row">
+            <div class="row-label" style="width: 150px">Last time synced:</div>
+            <div class="row-value">27-apr-2020 12:04:25</div>
+        </div>
+
+        <div class="line sync-row">
+            <button class="btn btn-info">Publish work</button>
+            <button class="btn btn-info">Update work</button>
+        </div>
+        <div class="line diff-row">
+            <div>Changed files</div>
+        </div>
+    </div>
+    <div class="messaging component">
+        <div class="line title-row">
+            <div class="">Matrix - Messaging</div>
+        </div>
+        <div class="line messages-row">
+            <div class="">Conversations</div>
+            <div class="message-row">
+                <span class="person">Thomas</span><span class="no-of-messages badge badge-danger">2</span> <span
+                        class="message">New meeting planned on wednesday. Make sure you are available</span>
+            </div>
+            <div class="message-row">
+                <span class="person">Alin</span><span class="no-of-messages badge badge-danger">1</span> <span
+                        class="message">Thank you.</span>
+            </div>
+
+        </div>
+        <button class="btn btn-info new-convo">New conversation</button>
+    </div>
+    <div class="management component">
+        <div class="line title-row">
+            <div class="">Project management</div>
+        </div>
+        <div style="height: 250px">
+
+
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="peerInfoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Node info</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                    <div class="line id-row">
+                        <div class="row-label">Peer ID:</div>
+                        <div class="row-value"></div>
+                    </div>
+
+                    <div class="line local-addrs-row">
+                        <div class="row-label">Swarm Local Address:</div>
+                        <textarea class="row-value" rows="2"></textarea>
+                    </div>
+                <button type="button" class="btn btn-link download-swarm-key">Download swarm key</button>
+
+            </div>
+
+        </div>
+    </div>
 </div>
 </body>
 <script
