added join project

--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -41,19 +41,25 @@
                 <input type="text" class="form-control" name="project_path" aria-label="Project Path" placeholder="Project Path"
                        aria-describedby="basic-addon1">
             </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="p2psystem" id="exampleRadios1" value="ipfs" checked>
+                <label class="form-check-label" for="exampleRadios1">
+                    IPFS
+                </label>
+            </div>
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customCheck1" name="git_ext">
+                <input type="checkbox" class="custom-control-input" checked id="customCheck1" name="git_ext">
                 <label class="custom-control-label" for="customCheck1">Include git extension</label>
             </div>
 
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customCheck2" name="message_ext">
+                    <input type="checkbox" class="custom-control-input" checked id="customCheck2" name="message_ext">
                 <label class="custom-control-label" for="customCheck2">Include messaging(Matrix) extension</label>
             </div>
 
             <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customCheck3" name="bug_ext">
-                <label class="custom-control-label" for="customCheck3">Include issue tracking(git-bug) extension</label>
+                <input type="checkbox" class="custom-control-input" checked id="customCheck3" name="bug_ext">
+                <label class="custom-control-label"  for="customCheck3">Include issue tracking(git-bug) extension</label>
             </div>
 
 
