fixed swarm key location request.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -100,7 +100,7 @@
 
                     <div class="line local-addrs-row">
                         <div class="row-label">Swarm Local Address:</div>
-                        <textarea class="row-value" rows="2"></textarea>
+                        <textarea class="row-value" rows="6" readonly></textarea>
                     </div>
                 <button type="button" class="btn btn-link download-swarm-key">Download swarm key</button>
 
