--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -27,6 +27,10 @@
                 <label for="bootsrapNodes">Bootstrap nodes</label>
                 <textarea class="form-control" name="bootstrap_nodes" id="bootsrapNodes" rows="4"></textarea>
             </div>
+            <div class="form-group">
+                <label for="projectPath">Project path</label>
+                <input class="form-control" type="text" name="project_path" id="projectPath" rows="4">
+            </div>
             <button type="submit" class="btn btn-info join-project-btn">Join project</button>
         </form>
     </div>
