--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,7 +102,10 @@
                         <div class="row-label">Swarm Local Address:</div>
                         <textarea class="row-value" rows="6" readonly></textarea>
                     </div>
-                <button type="button" class="btn btn-link download-swarm-key">Download swarm key</button>
+                <div class="line swarm-key-row">
+                    <div class="row-label">Swarm key content:</div>
+                    <textarea class="row-value" rows="6" readonly></textarea>
+                </div>
 
             </div>
 
