--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -29,7 +29,7 @@
             </div>
             <div class="form-group">
                 <label for="projectPath">Project path</label>
-                <input class="form-control" type="text" name="project_path" id="projectPath" rows="4">
+                <input class="form-control" type="text" name="project_path" id="projectPath" value="<%=projectPath%>">
             </div>
             <button type="submit" class="btn btn-info join-project-btn">Join project</button>
         </form>
@@ -43,7 +43,7 @@
             </div>
             <div class="input-group mb-3">
                 <input type="text" class="form-control" name="project_path" aria-label="Project Path" placeholder="Project Path"
-                       aria-describedby="basic-addon1">
+                       aria-describedby="basic-addon1" value="">
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="p2psystem" id="exampleRadios1" value="ipfs" checked>
