--- a/views/user-auth.ejs
+++ b/views/user-auth.ejs
@@ -48,7 +48,7 @@
             </div>
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Desired folder path for the application's config files" aria-label="Folder Path" name="folderpath"
-                       aria-describedby="basic-addon1" value="C:\Users\Alin\distcollab">
+                       aria-describedby="basic-addon1" value="<%=frameworkPath%>">
             </div>
             <button type="submit" class="btn btn-info register-submit">Register</button>
 
