--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -19,6 +19,10 @@
     <div class="join-proj-tab">
         <form id="join_proj_form" method="POST" action="/join_project">
             <div class="form-group">
+                <label for="project_name">Project Name</label>
+                <input class="form-control" name="project_name" id="project_name">
+            </div>
+            <div class="form-group">
                 <label for="swarm_key">Project Swarm Key content</label>
                 <textarea class="form-control" name="swarm_key_content" id="swarm_key" rows="4"></textarea>
             </div>
