added ipfs upload ipfs download functionality.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
             <div class="row-value" style="width: 88%;"><span class="peers-count"></span>
                 <div class="node-buttons-area">
                     <button class="btn btn-info publish-repository">Share Local Folder</button>
-                    <button class="btn btn-info">Update Local Folder</button>
+                    <button class="btn btn-info update-repository">Update Local Folder</button>
                     <button class="btn btn-info">Update Local Folder From specific peer</button>
                 </div>
             </div>
