--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
 
     <div class="messaging component">
         <div class="line title-row">
-            <div class="">Matrix - Messaging</div>
+            <div class="">Messaging</div>
         </div>
         <div class="line messages-row">
             <div class="">Conversations</div>
