--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -62,7 +62,7 @@
 
             <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" checked id="customCheck2" name="message_ext">
-                <label class="custom-control-label" for="customCheck2">Include messaging(Matrix) extension</label>
+                <label class="custom-control-label" for="customCheck2">Include messaging extension</label>
             </div>
 
             <div class="custom-control custom-checkbox">
