--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,12 +56,9 @@
         <button class="btn btn-info new-convo">New conversation</button>
     </div>
     <div class="management component">
-        <div class="line title-row">
-            <div class="">Project management</div>
-        </div>
-        <div style="height: 250px">
-
-
+        <div style="overflow-y: auto">
+        <iframe  class="webui-iframe" src=""></iframe>
+        <iframe  class="gitbug-iframe" src="http://localhost:3002"></iframe>
         </div>
     </div>
     </div>
