fixed small start errors

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,16 +34,16 @@
 
     </div>
     <div class="components-container">
-    <div class="version-control component"><iframe src="http://localhost:3001"></iframe></div>
+    <div class="version-control component"><iframe class="git-iframe" src=""></iframe></div>
 
     <div class="messaging component">
-        <iframe  class="chat-iframe" src="http://localhost:3003"></iframe>
+        <iframe  class="chat-iframe" src=""></iframe>
 
     </div>
     <div class="management component">
         <div style="overflow-y: auto; height: 100%">
         <iframe  class="webui-iframe" src="" style="height: 72%;"></iframe>
-        <iframe  class="gitbug-iframe" src="http://localhost:3002" style=" height: 50px;"></iframe>
+        <iframe  class="gitbug-iframe" src="" style=" height: 200px;"></iframe>
         </div>
     </div>
     </div>
