--- a/views/project-start.ejs
+++ b/views/project-start.ejs
@@ -11,8 +11,9 @@
 
 </head>
 
-<body>
-<div class="container container-fluid">
+
+<body style="background-color: #eeeeee;">
+<div class="container-fluid" style="padding: 20px;background-color: white;">
     <button type="button" class="btn btn-info join-button">Join a project</button>
     <button type="button" class="btn btn-info create-proj-button">Create a new project</button>
 
