--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,13 +7,13 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <form action="/login" method="post">
-        <button type="submit">login</button>
-    </form>
+
 </head>
 
-<body>
-
+<body style="background-color: #eeeeee;">
+    <form action="/login" method="post"style="padding: 20px;background-color: white;">
+        <button type="submit">login</button>
+    </form>
 </body>
 
 </html>
