--- a/views/user-auth.ejs
+++ b/views/user-auth.ejs
@@ -7,12 +7,16 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/user-auth-style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+<style>
+    .register-tab{
+        margin-top: 20px;
+    }
+</style>
 
 </head>
 
-<body>
-<div class="container container-fluid">
+<body style="background-color: #eeeeee;">
+<div class="container-fluid" style="padding: 20px;background-color: white;">
     <button type="button" class="btn btn-info register-button">Create account</button>
     <% if (existingUser) { %>
         <button type="button" class="btn btn-info login-button">Existing account</button>
