--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,8 +42,8 @@
     </div>
     <div class="management component">
         <div style="overflow-y: auto; height: 100%">
-        <iframe  class="webui-iframe" src="" style="height: 72%;"></iframe>
-        <iframe  class="gitbug-iframe" src="" style=" height: 200px;"></iframe>
+        <iframe  class="webui-iframe" src="" style=""></iframe>
+        <iframe  class="gitbug-iframe" src="" style=""></iframe>
         </div>
     </div>
     </div>
